# cogra

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-DOCS  Makefile  README.md  schema.graphql
.github/workflows/: ci.yml
.sqlx/: query-0869962e7585b708bcea0e39b51d610095592309e3a08867b902ce2676eb96af.json  query-16a9017e8d107dd314aada05a928318cbdc96ad1c60c4cc6500423da61967344.json  query-17e7bcc8354ad2320062d7f5c0305983aa9e4d4776b60bb941ed30d451e92ad1.json  query-1dcaf0dd04ffb42c41136b3852efc9b0a09e47c7356d00bc09185ea84c0ad479.json  query-3b6b82928525c5e1c3d1468d1f42bba6941e782a76feb0c79c5805e990838b7c.json  query-4ca733d40af22063a8e6f1b3c545a8e83689ce8ff83226ff2f4df66ce2aacf88.json  query-4ebc19f51ea81e3552766d6043c88b8aefbc0e29ac08dbad18a433d0f20753da.json  query-4faccc4cb326c677f9764c16b49a58cec2bb473a3213902749374af7e8f6e40e.json  query-5414a901ec3d29d89e3d6ff0f66a2b795091f21a00918e0dfb49c05903120077.json  query-5523ce07affb3796eb0e51569b2ce375e33f1584cc45ed5fbf06fa842524feaf.json  query-5627877c49e5a0b0979bdc2310dc78e25d34bfa94106f9c910ec3f71c14484eb.json  query-5d623c98ed20cad3c0c4a7448c13ed51767b3bd8acd86ee678b594daede7ae9c.json  query-710c7fa3e54c6f8eaabf0204c1f0c964cc854a3b3c22eb2d14fbef520e3f779b.json  query-8427a52c3d52bc48fd5392f19b552cc2bfc09aa59c1de56227c60bd12fe577cc.json  query-8501a5ac0e351b79600824ef3252f5ab902cc09f5dbf88f14079b5d48e7d2204.json  query-873d85ef4e66707684bf79c0065b87ddf5adc7827e02c4d19f681ffdfd8eec6b.json  query-d8b8f96379e10e39d14fbb7d2ca35b5468e54ab68ce86380a396724268ad07da.json  query-e1a25b153a8e95778a96328cdc883a0846f813fde75124c3eb7e7aff05ecc81a.json
android/: .gitignore  CLAUDE.md  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
crates/api/: Cargo.toml
crates/api/src/: bootstrap.rs  lib.rs  main.rs  schema.rs
crates/api/src/auth/: jwt.rs  keys.rs  mod.rs  password.rs  policy.rs  tokens.rs  validate.rs
crates/api/src/schema/: errors.rs  mod.rs  ops.rs  types.rs  user.rs
crates/api/tests/: auth_flow.rs  bootstrap.rs  profile_flow.rs  schema_drift.rs  server.rs
crates/common/: Cargo.toml
crates/graph-engine/: Cargo.toml
crates/postgres-store/: Cargo.toml
docker/: docker-compose.yml
docs/: README.md  api-spec.md  architecture.md  chats.md  companies.md  data-model.md  development.md  economics-scratch.md  edge-tensor-model.md  edges.md  feed-ranking.md  governance.md  graph-model.md  invitations.md  items.md  layers.md  nodes.md  open-questions.md
docs/implementation/: android.md  api-spec.md  architecture.md  auth.md  data-model.md  development.md  graph-data-model.md  ledger.md  (+2 more)
migrations/: 20260612201452_foundation_schema.sql  20260616120000_pending_registration_email_unique.sql
(+109 files in other folders)
