[package]
name    = "api"
version.workspace = true
edition.workspace = true
# Two binaries live here (the server + the schema exporter); name the
# server as default so `cargo run -p api` and `make api` stay unambiguous.
default-run = "api"

[lints]
workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "export-schema"
path = "src/bin/export-schema.rs"

[dependencies]
graph-engine     = { path = "../graph-engine" }
postgres-store   = { path = "../postgres-store" }

tokio             = { workspace = true }
axum              = { workspace = true }
async-graphql     = { workspace = true }
async-graphql-axum = { workspace = true }
serde_json        = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower         = { version = "0.5", features = ["util"] }
http-body-util = { version = "0.1" }
